# autonomous-security-ai

./: README.md  config.yaml  pyproject.toml  requirements.txt
data/processed/: feedback.jsonl  incidents.jsonl
models/: anomaly_model.joblib  anomaly_model_features.json  anomaly_model_meta.json  versions.json
reports/: demo_report.md  latest.md
src/: cli.py  main.py
src/core/: config.py  logger.py  schemas.py  storage.py
src/eval/: experiment_runner.py  metrics.py
src/explain/: explainer.py
src/features/: feature_engineering.py  windowing.py
src/feedback/: feedback_store.py  retrainer.py  tuner.py
src/model/: anomaly_model.py  versioning.py
src/policy/: actions.py  decision_engine.py
src/simulator/: generator.py  profiles.py  scenarios.py
tests/: test_features.py  test_model_persistence.py  test_policy.py
